@@ -8,6 +8,7 @@ Unreleased Version 2.2.2-pre
  * Fix: Make floating docks stay on top of the main window on macOS. Thanks 6ix for reporting and testing.
  * Feature: Add a dual color button, showing the foreground and background color, with the ability to set, swap and reset them.
  * Feature: Add "merged without background" as a source for the flood fill tool.
+ * Server Fix: Include allow web flag when listing a session.
 
 2024-02-18 Version 2.2.1
  * Fix: Default to previous directory when saving a fresh file. Thanks Crow for reporting.
